remove deprecated -XX:+PrintGCDetails